force-app/main/default/objects/Opportunity/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>