force-app/main/default/objects/Opportunity/fields/Agreement_Destination__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Destination__c</fullName>
    <label>Agreement Destination</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>