force-app/main/default/objects/Opportunity/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <type>Text</type>
    <length>255</length>
</CustomField>