force-app/main/default/objects/Opportunity/fields/Amount_Error__c.field-meta.xml
<CustomField>
    <fullName>Amount_Error__c</fullName>
    <description>Error message for amount processing issues</description>
    <label>Amount Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>