force-app/main/default/objects/Opportunity/fields/Amount_Key_Solution__c.field-meta.xml
<CustomField>
    <fullName>Amount_Key_Solution__c</fullName>
    <label>Amount Key Solution</label>
    <type>Text</type>
    <length>255</length>
</CustomField>