force-app/main/default/objects/Opportunity/fields/Amount_Review_Platform__c.field-meta.xml
<CustomField>
    <fullName>Amount_Review_Platform__c</fullName>
    <label>Amount Review Platform</label>
    <type>Text</type>
    <length>255</length>
</CustomField>