force-app/main/default/objects/Opportunity/fields/Approval_District__c.field-meta.xml
<CustomField>
    <fullName>Approval_District__c</fullName>
    <label>Approval District</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>