force-app/main/default/objects/Opportunity/fields/Audit_Module__c.field-meta.xml
<CustomField>
    <fullName>Audit_Module__c</fullName>
    <label>Audit Module</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>