force-app/main/default/objects/Opportunity/fields/Audit_Performance__c.field-meta.xml
<CustomField>
    <fullName>Audit_Performance__c</fullName>
    <label>Audit Performance</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>