force-app/main/default/objects/Opportunity/fields/Authorization_Division_Technique__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Division_Technique__c</fullName>
    <label>Authorization Division Technique</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>