force-app/main/default/objects/Opportunity/fields/Authorization_Error_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Error_Strategy__c</fullName>
    <label>Authorization Error Strategy</label>
    <type>Text</type>
    <length>255</length>
</CustomField>