force-app/main/default/objects/Opportunity/fields/Batch_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Batch_Update_Date__c</fullName>
    <description>Date when batch last updated this opportunity</description>
    <label>Batch Update Date</label>
    <type>DateTime</type>
</CustomField>