force-app/main/default/objects/Opportunity/fields/Benchmark__c.field-meta.xml
<CustomField>
    <fullName>Benchmark__c</fullName>
    <label>Benchmark</label>
    <type>Text</type>
    <length>255</length>
</CustomField>