force-app/main/default/objects/Opportunity/fields/Branch_Division__c.field-meta.xml
<CustomField>
    <fullName>Branch_Division__c</fullName>
    <label>Branch Division</label>
    <type>Text</type>
    <length>255</length>
</CustomField>