force-app/main/default/objects/Opportunity/fields/Branch_Index_Approval__c.field-meta.xml
<CustomField>
    <fullName>Branch_Index_Approval__c</fullName>
    <label>Branch Index Approval</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>