force-app/main/default/objects/Opportunity/fields/Branch_Quote__c.field-meta.xml
<CustomField>
    <fullName>Branch_Quote__c</fullName>
    <label>Branch Quote</label>
    <type>Text</type>
    <length>255</length>
</CustomField>