force-app/main/default/objects/Opportunity/fields/Bundle_Alert_Term__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Alert_Term__c</fullName>
    <label>Bundle Alert Term</label>
    <type>Text</type>
    <length>255</length>
</CustomField>