force-app/main/default/objects/Opportunity/fields/Capacity_District_Token__c.field-meta.xml
<CustomField>
    <fullName>Capacity_District_Token__c</fullName>
    <label>Capacity District Token</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>