force-app/main/default/objects/Opportunity/fields/Capacity_Performance_Review__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Performance_Review__c</fullName>
    <label>Capacity Performance Review</label>
    <type>Text</type>
    <length>255</length>
</CustomField>