force-app/main/default/objects/Opportunity/fields/Category_Target_Package__c.field-meta.xml
<CustomField>
    <fullName>Category_Target_Package__c</fullName>
    <label>Category Target Package</label>
    <type>Text</type>
    <length>255</length>
</CustomField>