force-app/main/default/objects/Opportunity/fields/Check__c.field-meta.xml
<CustomField>
    <fullName>Check__c</fullName>
    <label>Check</label>
    <type>Text</type>
    <length>255</length>
</CustomField>