force-app/main/default/objects/Opportunity/fields/Check_Location__c.field-meta.xml
<CustomField>
    <fullName>Check_Location__c</fullName>
    <label>Check Location</label>
    <type>Text</type>
    <length>255</length>
</CustomField>