force-app/main/default/objects/Opportunity/fields/Class_Rank__c.field-meta.xml
<CustomField>
    <fullName>Class_Rank__c</fullName>
    <label>Class Rank</label>
    <type>Text</type>
    <length>255</length>
</CustomField>