force-app/main/default/objects/Opportunity/fields/Class_Validation__c.field-meta.xml
<CustomField>
    <fullName>Class_Validation__c</fullName>
    <label>Class Validation</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>