force-app/main/default/objects/Opportunity/fields/Client_Total_Invoice_Value__c.field-meta.xml
<CustomField>
    <fullName>Client_Total_Invoice_Value__c</fullName>
    <label>Client Total Invoice Value</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>