force-app/main/default/objects/Opportunity/fields/Component_Notice_Package__c.field-meta.xml
<CustomField>
    <fullName>Component_Notice_Package__c</fullName>
    <label>Component Notice Package</label>
    <type>Text</type>
    <length>255</length>
</CustomField>