force-app/main/default/objects/Opportunity/fields/Cost_Client__c.field-meta.xml
<CustomField>
    <fullName>Cost_Client__c</fullName>
    <label>Cost Client</label>
    <type>Text</type>
    <length>255</length>
</CustomField>