force-app/main/default/objects/Opportunity/fields/Customer_Invoice_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Customer_Invoice_Total_Amount__c</fullName>
    <description>Stores the total value of the invoices for this customer.</description>
    <label>Customer Invoice Total Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>