force-app/main/default/objects/Opportunity/fields/Deal_Exception__c.field-meta.xml
<CustomField>
    <fullName>Deal_Exception__c</fullName>
    <label>Deal Exception</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>