force-app/main/default/objects/Opportunity/fields/Deal_Risk__c.field-meta.xml
<CustomField>
    <fullName>Deal_Risk__c</fullName>
    <label>Deal Risk</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>