force-app/main/default/objects/Opportunity/fields/Department_District__c.field-meta.xml
<CustomField>
    <fullName>Department_District__c</fullName>
    <label>Department District</label>
    <type>Text</type>
    <length>255</length>
</CustomField>