force-app/main/default/objects/Opportunity/fields/Deprecated_Amount_Statement__c.field-meta.xml
<CustomField>
    <fullName>Deprecated_Amount_Statement__c</fullName>
    <label>Deprecated Amount Statement</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>