force-app/main/default/objects/Opportunity/fields/Discount_Calculated_By__c.field-meta.xml
<CustomField>
    <fullName>Discount_Calculated_By__c</fullName>
    <description>User who calculated the discount</description>
    <label>Discount Calculated By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>