force-app/main/default/objects/Opportunity/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <label>District</label>
    <type>Text</type>
    <length>255</length>
</CustomField>