force-app/main/default/objects/Opportunity/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>