force-app/main/default/objects/Opportunity/fields/Document_System__c.field-meta.xml
<CustomField>
    <fullName>Document_System__c</fullName>
    <label>Document System</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>