force-app/main/default/objects/Opportunity/fields/Duration_Audit_Warning__c.field-meta.xml
<CustomField>
    <fullName>Duration_Audit_Warning__c</fullName>
    <label>Duration Audit Warning</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>