force-app/main/default/objects/Opportunity/fields/Duration_Condition__c.field-meta.xml
<CustomField>
    <fullName>Duration_Condition__c</fullName>
    <label>Duration Condition</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>