force-app/main/default/objects/Opportunity/fields/Enterprise_Level_Total__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Level_Total__c</fullName>
    <description>Total for enterprise level deals</description>
    <label>Enterprise Level Total</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>