force-app/main/default/objects/Opportunity/fields/Entry_Discount__c.field-meta.xml
<CustomField>
    <fullName>Entry_Discount__c</fullName>
    <label>Entry Discount</label>
    <type>Text</type>
    <length>255</length>
</CustomField>