force-app/main/default/objects/Opportunity/fields/Existing_Client_Reduction__c.field-meta.xml
<CustomField>
    <fullName>Existing_Client_Reduction__c</fullName>
    <description>Reduction for existing clients</description>
    <label>Existing Client Reduction</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>