force-app/main/default/objects/Opportunity/fields/Finance_Service_Charge__c.field-meta.xml
<CustomField>
    <fullName>Finance_Service_Charge__c</fullName>
    <description>Service charge for finance industry</description>
    <label>Finance Service Charge</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>