force-app/main/default/objects/Opportunity/fields/Gateway__c.field-meta.xml
<CustomField>
    <fullName>Gateway__c</fullName>
    <label>Gateway</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>