force-app/main/default/objects/Opportunity/fields/Group_Classic_Bid__c.field-meta.xml
<CustomField>
    <fullName>Group_Classic_Bid__c</fullName>
    <label>Group Classic Bid</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>