force-app/main/default/objects/Opportunity/fields/Group_Income_Record__c.field-meta.xml
<CustomField>
    <fullName>Group_Income_Record__c</fullName>
    <label>Group Income Record</label>
    <type>Text</type>
    <length>255</length>
</CustomField>