force-app/main/default/objects/Opportunity/fields/Healthcare_Special_Rate__c.field-meta.xml
<CustomField>
    <fullName>Healthcare_Special_Rate__c</fullName>
    <description>Special rate for healthcare industry</description>
    <label>Healthcare Special Rate</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>