force-app/main/default/objects/Opportunity/fields/Historical__c.field-meta.xml
<CustomField>
    <fullName>Historical__c</fullName>
    <label>Historical</label>
    <type>Text</type>
    <length>255</length>
</CustomField>