force-app/main/default/objects/Opportunity/fields/ID_Charge_Log__c.field-meta.xml
<CustomField>
    <fullName>ID_Charge_Log__c</fullName>
    <label>Id Charge Log</label>
    <type>Text</type>
    <length>255</length>
</CustomField>