force-app/main/default/objects/Opportunity/fields/Income_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Income_Percentage__c</fullName>
    <label>Income Percentage</label>
    <type>Text</type>
    <length>255</length>
</CustomField>