force-app/main/default/objects/Opportunity/fields/Index_Capacity_Department__c.field-meta.xml
<CustomField>
    <fullName>Index_Capacity_Department__c</fullName>
    <label>Index Capacity Department</label>
    <type>Text</type>
    <length>255</length>
</CustomField>