force-app/main/default/objects/Opportunity/fields/Indicator_Gateway_Reference__c.field-meta.xml
<CustomField>
    <fullName>Indicator_Gateway_Reference__c</fullName>
    <label>Indicator Gateway Reference</label>
    <type>Text</type>
    <length>255</length>
</CustomField>