force-app/main/default/objects/Opportunity/fields/Indicator_Source_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Indicator_Source_Capacity__c</fullName>
    <label>Indicator Source Capacity</label>
    <type>Text</type>
    <length>255</length>
</CustomField>