force-app/main/default/objects/Opportunity/fields/Indicator_Type__c.field-meta.xml
<CustomField>
    <fullName>Indicator_Type__c</fullName>
    <label>Indicator Type</label>
    <type>Text</type>
    <length>255</length>
</CustomField>