force-app/main/default/objects/Opportunity/fields/Information_Classic__c.field-meta.xml
<CustomField>
    <fullName>Information_Classic__c</fullName>
    <label>Information Classic</label>
    <type>Text</type>
    <length>255</length>
</CustomField>