force-app/main/default/objects/Opportunity/fields/Information_Log_Period__c.field-meta.xml
<CustomField>
    <fullName>Information_Log_Period__c</fullName>
    <label>Information Log Period</label>
    <type>Text</type>
    <length>255</length>
</CustomField>