force-app/main/default/objects/Opportunity/fields/Information_Tender_Group__c.field-meta.xml
<CustomField>
    <fullName>Information_Tender_Group__c</fullName>
    <label>Information Tender Group</label>
    <type>Text</type>
    <length>255</length>
</CustomField>