force-app/main/default/objects/Opportunity/fields/Interface__c.field-meta.xml
<CustomField>
    <fullName>Interface__c</fullName>
    <label>Interface</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>