force-app/main/default/objects/Opportunity/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <label>Invoice</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>