force-app/main/default/objects/Opportunity/fields/Invoice_Record_Index__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Record_Index__c</fullName>
    <label>Invoice Record Index</label>
    <type>Text</type>
    <length>255</length>
</CustomField>