force-app/main/default/objects/Opportunity/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <label>Issue</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>