force-app/main/default/objects/Opportunity/fields/Issue_Branch_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Issue_Branch_Procedure__c</fullName>
    <label>Issue Branch Procedure</label>
    <type>Text</type>
    <length>255</length>
</CustomField>