force-app/main/default/objects/Opportunity/fields/Issue_Route_Statement__c.field-meta.xml
<CustomField>
    <fullName>Issue_Route_Statement__c</fullName>
    <label>Issue Route Statement</label>
    <type>Text</type>
    <length>255</length>
</CustomField>