force-app/main/default/objects/Opportunity/fields/Large_Deal_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Large_Deal_Indicator__c</fullName>
    <description>Indicator for large deals</description>
    <label>Large Deal Indicator</label>
    <length>10</length>
    <type>Text</type>
</CustomField>