force-app/main/default/objects/Opportunity/fields/Legacy_Cycle_Sum__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Cycle_Sum__c</fullName>
    <label>Legacy Cycle Sum</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>