force-app/main/default/objects/Opportunity/fields/Legacy_Discount__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Discount__c</fullName>
    <description>Legacy discount field from old system</description>
    <label>Legacy Discount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>