force-app/main/default/objects/Opportunity/fields/Level_Component_Size__c.field-meta.xml
<CustomField>
    <fullName>Level_Component_Size__c</fullName>
    <label>Level Component Size</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>