force-app/main/default/objects/Opportunity/fields/Log__c.field-meta.xml
<CustomField>
    <fullName>Log__c</fullName>
    <label>Log</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>