force-app/main/default/objects/Opportunity/fields/Log_Client_Verification__c.field-meta.xml
<CustomField>
    <fullName>Log_Client_Verification__c</fullName>
    <label>Log Client Verification</label>
    <type>Text</type>
    <length>255</length>
</CustomField>