force-app/main/default/objects/Opportunity/fields/Low_Probability_Flag__c.field-meta.xml
<CustomField>
    <fullName>Low_Probability_Flag__c</fullName>
    <description>Flag for low probability opportunities</description>
    <label>Low Probability Flag</label>
    <length>10</length>
    <type>Text</type>
</CustomField>