force-app/main/default/objects/Opportunity/fields/Measure__c.field-meta.xml
<CustomField>
    <fullName>Measure__c</fullName>
    <label>Measure</label>
    <type>Text</type>
    <length>255</length>
</CustomField>