force-app/main/default/objects/Opportunity/fields/Medium_Deal_Flag__c.field-meta.xml
<CustomField>
    <fullName>Medium_Deal_Flag__c</fullName>
    <description>Flag for medium deals</description>
    <label>Medium Deal Flag</label>
    <length>10</length>
    <type>Text</type>
</CustomField>