force-app/main/default/objects/Opportunity/fields/Metric_District_Exception__c.field-meta.xml
<CustomField>
    <fullName>Metric_District_Exception__c</fullName>
    <label>Metric District Exception</label>
    <type>Text</type>
    <length>255</length>
</CustomField>