force-app/main/default/objects/Opportunity/fields/Mid_Market_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Mid_Market_Adjustment__c</fullName>
    <description>Adjustment for mid market deals</description>
    <label>Mid Market Adjustment</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>