force-app/main/default/objects/Opportunity/fields/Missing_Date_Error__c.field-meta.xml
<CustomField>
    <fullName>Missing_Date_Error__c</fullName>
    <description>Error message for missing close date</description>
    <label>Missing Date Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>