force-app/main/default/objects/Opportunity/fields/New_Client_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>New_Client_Adjustment__c</fullName>
    <description>Adjustment for new clients</description>
    <label>New Client Adjustment</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>