force-app/main/default/objects/Opportunity/fields/Nightly_Processed__c.field-meta.xml
<CustomField>
    <fullName>Nightly_Processed__c</fullName>
    <description>Tracks if opportunity was processed by nightly batch</description>
    <label>Nightly Processed</label>
    <length>10</length>
    <type>Text</type>
</CustomField>