force-app/main/default/objects/Opportunity/fields/No_Amount_Total__c.field-meta.xml
<CustomField>
    <fullName>No_Amount_Total__c</fullName>
    <description>Total field for opportunities with no amount</description>
    <label>No Amount Total</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>