force-app/main/default/objects/Opportunity/fields/No_Probability_Value__c.field-meta.xml
<CustomField>
    <fullName>No_Probability_Value__c</fullName>
    <description>Indicates missing probability value</description>
    <label>No Probability Value</label>
    <length>20</length>
    <type>Text</type>
</CustomField>