force-app/main/default/objects/Opportunity/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <label>Number</label>
    <type>Text</type>
    <length>255</length>
</CustomField>