force-app/main/default/objects/Opportunity/fields/Offer_Account__c.field-meta.xml
<CustomField>
    <fullName>Offer_Account__c</fullName>
    <label>Offer Account</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>