force-app/main/default/objects/Opportunity/fields/Offer_Destination__c.field-meta.xml
<CustomField>
    <fullName>Offer_Destination__c</fullName>
    <label>Offer Destination</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>