force-app/main/default/objects/Opportunity/fields/Old__c.field-meta.xml
<CustomField>
    <fullName>Old__c</fullName>
    <label>Old</label>
    <type>Text</type>
    <length>255</length>
</CustomField>