force-app/main/default/objects/Opportunity/fields/Old_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Old_Tax_Rate__c</fullName>
    <description>Legacy tax rate field from old system</description>
    <label>Old Tax Rate</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>