force-app/main/default/objects/Opportunity/fields/Other_Category_Total__c.field-meta.xml
<CustomField>
    <fullName>Other_Category_Total__c</fullName>
    <description>Total for other categories</description>
    <label>Other Category Total</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>