force-app/main/default/objects/Opportunity/fields/Package_Goods__c.field-meta.xml
<CustomField>
    <fullName>Package_Goods__c</fullName>
    <label>Package Goods</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>