force-app/main/default/objects/Opportunity/fields/Partner_Path__c.field-meta.xml
<CustomField>
    <fullName>Partner_Path__c</fullName>
    <label>Partner Path</label>
    <type>Text</type>
    <length>255</length>
</CustomField>