force-app/main/default/objects/Opportunity/fields/Partner_Territory__c.field-meta.xml
<CustomField>
    <fullName>Partner_Territory__c</fullName>
    <label>Partner Territory</label>
    <type>Text</type>
    <length>255</length>
</CustomField>