force-app/main/default/objects/Opportunity/fields/Payment_Condition_Tax__c.field-meta.xml
<CustomField>
    <fullName>Payment_Condition_Tax__c</fullName>
    <label>Payment Condition Tax</label>
    <type>Text</type>
    <length>255</length>
</CustomField>