force-app/main/default/objects/Opportunity/fields/Percentage_Classic__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Classic__c</fullName>
    <label>Percentage Classic</label>
    <type>Text</type>
    <length>255</length>
</CustomField>