force-app/main/default/objects/Opportunity/fields/Performance_Token__c.field-meta.xml
<CustomField>
    <fullName>Performance_Token__c</fullName>
    <label>Performance Token</label>
    <type>Text</type>
    <length>255</length>
</CustomField>