force-app/main/default/objects/Opportunity/fields/Period_Bundle_Territory__c.field-meta.xml
<CustomField>
    <fullName>Period_Bundle_Territory__c</fullName>
    <label>Period Bundle Territory</label>
    <type>Text</type>
    <length>255</length>
</CustomField>