force-app/main/default/objects/Opportunity/fields/Period_Rank__c.field-meta.xml
<CustomField>
    <fullName>Period_Rank__c</fullName>
    <label>Period Rank</label>
    <type>Text</type>
    <length>255</length>
</CustomField>