force-app/main/default/objects/Opportunity/fields/Pipeline_Check_State__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Check_State__c</fullName>
    <label>Pipeline Check State</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>