force-app/main/default/objects/Opportunity/fields/Platform_Deal__c.field-meta.xml
<CustomField>
    <fullName>Platform_Deal__c</fullName>
    <label>Platform Deal</label>
    <type>Text</type>
    <length>255</length>
</CustomField>