force-app/main/default/objects/Opportunity/fields/Platform_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Platform_Percentage__c</fullName>
    <label>Platform Percentage</label>
    <type>Text</type>
    <length>255</length>
</CustomField>