force-app/main/default/objects/Opportunity/fields/Portal_Measure_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Portal_Measure_Workflow__c</fullName>
    <label>Portal Measure Workflow</label>
    <type>Text</type>
    <length>255</length>
</CustomField>