force-app/main/default/objects/Opportunity/fields/Price_Target_Key__c.field-meta.xml
<CustomField>
    <fullName>Price_Target_Key__c</fullName>
    <label>Price Target Key</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>