force-app/main/default/objects/Opportunity/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <label>Process</label>
    <type>Text</type>
    <length>255</length>
</CustomField>