force-app/main/default/objects/Opportunity/fields/Process_Agreement_Token__c.field-meta.xml
<CustomField>
    <fullName>Process_Agreement_Token__c</fullName>
    <label>Process Agreement Token</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>