force-app/main/default/objects/Opportunity/fields/Process_Condition__c.field-meta.xml
<CustomField>
    <fullName>Process_Condition__c</fullName>
    <label>Process Condition</label>
    <type>Text</type>
    <length>255</length>
</CustomField>