force-app/main/default/objects/Opportunity/fields/Process_Group_Scale__c.field-meta.xml
<CustomField>
    <fullName>Process_Group_Scale__c</fullName>
    <label>Process Group Scale</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>