force-app/main/default/objects/Opportunity/fields/Product_Approval_Tax__c.field-meta.xml
<CustomField>
    <fullName>Product_Approval_Tax__c</fullName>
    <label>Product Approval Tax</label>
    <type>Text</type>
    <length>255</length>
</CustomField>