force-app/main/default/objects/Opportunity/fields/Product_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Product_Revenue__c</fullName>
    <label>Product Revenue</label>
    <type>Text</type>
    <length>255</length>
</CustomField>