force-app/main/default/objects/Opportunity/fields/Profit_Component_Number__c.field-meta.xml
<CustomField>
    <fullName>Profit_Component_Number__c</fullName>
    <label>Profit Component Number</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>