force-app/main/default/objects/Opportunity/fields/Profit_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Profit_Percentage__c</fullName>
    <label>Profit Percentage</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>