force-app/main/default/objects/Opportunity/fields/Profit_Score__c.field-meta.xml
<CustomField>
    <fullName>Profit_Score__c</fullName>
    <label>Profit Score</label>
    <type>Text</type>
    <length>255</length>
</CustomField>