force-app/main/default/objects/Opportunity/fields/Proposal_Charge_Area__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Charge_Area__c</fullName>
    <label>Proposal Charge Area</label>
    <type>Text</type>
    <length>255</length>
</CustomField>