force-app/main/default/objects/Opportunity/fields/Proposal_Document_Region__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Document_Region__c</fullName>
    <label>Proposal Document Region</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>