force-app/main/default/objects/Opportunity/fields/Quality_Client_Channel__c.field-meta.xml
<CustomField>
    <fullName>Quality_Client_Channel__c</fullName>
    <label>Quality Client Channel</label>
    <type>Text</type>
    <length>255</length>
</CustomField>