force-app/main/default/objects/Opportunity/fields/Rank_Metric__c.field-meta.xml
<CustomField>
    <fullName>Rank_Metric__c</fullName>
    <label>Rank Metric</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>