force-app/main/default/objects/Opportunity/fields/Rating_Zone_Area__c.field-meta.xml
<CustomField>
    <fullName>Rating_Zone_Area__c</fullName>
    <label>Rating Zone Area</label>
    <type>Text</type>
    <length>255</length>
</CustomField>