force-app/main/default/objects/Opportunity/fields/Receipt__c.field-meta.xml
<CustomField>
    <fullName>Receipt__c</fullName>
    <label>Receipt</label>
    <type>Text</type>
    <length>255</length>
</CustomField>