force-app/main/default/objects/Opportunity/fields/Record__c.field-meta.xml
<CustomField>
    <fullName>Record__c</fullName>
    <label>Record</label>
    <type>Text</type>
    <length>255</length>
</CustomField>