force-app/main/default/objects/Opportunity/fields/Record_Product_Stage__c.field-meta.xml
<CustomField>
    <fullName>Record_Product_Stage__c</fullName>
    <label>Record Product Stage</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>