force-app/main/default/objects/Opportunity/fields/Reseller__c.field-meta.xml
<CustomField>
    <fullName>Reseller__c</fullName>
    <label>Reseller</label>
    <type>Text</type>
    <length>255</length>
</CustomField>