force-app/main/default/objects/Opportunity/fields/Reseller_Group_District__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Group_District__c</fullName>
    <label>Reseller Group District</label>
    <type>Text</type>
    <length>255</length>
</CustomField>