force-app/main/default/objects/Opportunity/fields/Retired__c.field-meta.xml
<CustomField>
    <fullName>Retired__c</fullName>
    <label>Retired</label>
    <type>Text</type>
    <length>255</length>
</CustomField>