force-app/main/default/objects/Opportunity/fields/Retired_Capacity_File__c.field-meta.xml
<CustomField>
    <fullName>Retired_Capacity_File__c</fullName>
    <label>Retired Capacity File</label>
    <type>Text</type>
    <length>255</length>
</CustomField>