force-app/main/default/objects/Opportunity/fields/Retired_Fee__c.field-meta.xml
<CustomField>
    <fullName>Retired_Fee__c</fullName>
    <description>Retired fee field from legacy system</description>
    <label>Retired Fee</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>