force-app/main/default/objects/Opportunity/fields/Retired_Workflow_Information__c.field-meta.xml
<CustomField>
    <fullName>Retired_Workflow_Information__c</fullName>
    <label>Retired Workflow Information</label>
    <type>Text</type>
    <length>255</length>
</CustomField>