force-app/main/default/objects/Opportunity/fields/Revenue_Scope_Index__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Scope_Index__c</fullName>
    <label>Revenue Scope Index</label>
    <type>Text</type>
    <length>255</length>
</CustomField>