force-app/main/default/objects/Opportunity/fields/Revenue_Site__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Site__c</fullName>
    <label>Revenue Site</label>
    <type>Text</type>
    <length>255</length>
</CustomField>