force-app/main/default/objects/Opportunity/fields/Risk__c.field-meta.xml
<CustomField>
    <fullName>Risk__c</fullName>
    <label>Risk</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>