force-app/main/default/objects/Opportunity/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <label>Route</label>
    <type>Text</type>
    <length>255</length>
</CustomField>