force-app/main/default/objects/Opportunity/fields/Scale_Size__c.field-meta.xml
<CustomField>
    <fullName>Scale_Size__c</fullName>
    <label>Scale Size</label>
    <type>Text</type>
    <length>255</length>
</CustomField>