force-app/main/default/objects/Opportunity/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <label>Scope</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>