force-app/main/default/objects/Opportunity/fields/Scope_Balance__c.field-meta.xml
<CustomField>
    <fullName>Scope_Balance__c</fullName>
    <label>Scope Balance</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>